* Dialer: Found probable cause of unexpected delays in outgoing calls. Asterisk
  AMI may emit events at any arbitrary frequency. If AMI manages to continuosly 
  emit events with less than 1 second delay, the event loop in the dialer will
  get stuck processing events (even if not interesting) and never dispatch any
  new calls. Fixed by forcing end of event receipt inside wait_response() method 
  in phpagi-asmanager-elastix.php. Might fix Elastix bugs #543, #577.
* Web interface: cleanup of i18n files to bring them in line with the rest of 
  the Elastix code.

1.5-3.7 (SVN revision 1843)
* Dialer: Add debug notification when record has just been inserted in 
  current_calls. Should help debug unexplained delays of call notifications in
  agent console.
* Dialer: Asterisk 1.6.x expects context variables separated by commas, not 
  pipes. Should fix Elastix bug #558.
* Dialer: asterisk 1.6.2.x emits Dial event with changed property name. Account
  for the difference in order to prevent access to undefined property.
* Reports (Agent Information): behave properly when no queues have been defined.
* Agent Console: protect private declaration of getParameter() in call 
  programming so that it does not conflict with Elastix 2 framework. Fixes
  Elastix bug #478.
* Trunks Used per Hour: fix over-complicated query for active trunks from 
  FreePBX database that resulted in misnamed trunk sources. Should fix Elastix
  bug #499.
* Campaigns Out: set array variables holding recordsets to NULL as soon as 
  possible in the CSV download codepath. This reduces memory usage and allows
  processing of a larger number of call records without exceeding the PHP
  memory limit. Also, for the same purpose, replace superfluous array 
  assignment via loop, with direct recordset assignment.

1.5-3.6 (SVN revision 1713)
* Configuration: detect and use generic-cloexec if available. Should fix issue
  of httpd failing to restart due to dialer process grabbing HTTP[S] ports