@@ -1,3 +1,5 @@
+* Agent Console: move around conditional declaration of getParameter so that
+  it is available at the moment it is required.
 * Dialer: Found probable cause of unexpected delays in outgoing calls. Asterisk
   AMI may emit events at any arbitrary frequency. If AMI manages to continuosly 
   emit events with less than 1 second delay, the event loop in the dialer will
